@@ -1,5 +1,5 @@
 <objects>
-  <object type="Monodoc.Editor.DocumentEditor" palette-category="widget" allow-children="false" base-type="Gtk.TextView">
+  <object type="Monodoc.Editor.Gui.DocumentEditor" palette-category="widget" allow-children="false" base-type="Gtk.TextView">
     <itemgroups />
     <signals />
   </object>
