@@ -34,7 +34,8 @@
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Project" localcopy="True" refto="Monodoc.Editor.Utils" />
+    <ProjectReference type="Project" localcopy="True" refto="Monodoc.Editor.Gui" />
   </References>
-  <Deployment.LinuxDeployData scriptName="monodoc-editor" />
   <GtkDesignInfo partialTypes="True" />
+  <Deployment.LinuxDeployData scriptName="monodoc-editor" />
 </Project>
